--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,6 +1,7 @@
 <div class="row">
     <div class="col-xs-12 col-sm-4">
       <div class="list-group">
+        <button class="btn btn-button" (click)= onReload()> Reload</button>
         <a
           href="#"
           class="list-group-item"
