guard adde to our routes , and othe services for auth entification

--- a/src/app/servers/edit-server/edit-server.component.html
+++ b/src/app/servers/edit-server/edit-server.component.html
@@ -1,3 +1,5 @@
+<h4 *ngIf = "!allowEdit"> you are not allowed to edit</h4>
+<div *ngIf ="allowedEdit">
 <div class="form-group">
     <label for="name">Server Name</label>
     <input
@@ -19,4 +21,5 @@
   <button
     class="btn btn-primary"
     (click)="onUpdateServer()">Update Server</button>
+  </div>
   
