--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,9 +1,11 @@
 <div class="row">
     <div class="col-xs-12 col-sm-4">
       <div class="list-group">
-        <button class="btn btn-button" (click)= onReload()> Reload</button>
+        
         <a
-          href="#"
+          [routerLink] = "['/servers',server.id]"
+          [queryParams] = "{allowEdit: server.id ===3?'1':'0'}"
+          [fragment] = "loading"
           class="list-group-item"
           *ngFor="let server of servers">
           {{ server.name }}
@@ -11,9 +13,12 @@
       </div>
     </div>
     <div class="col-xs-12 col-sm-4">
+      <router-outlet></router-outlet>
+      <!--<button class="btn btn-primary" (click)= "onReload()">Reload Page </button>
       <app-edit-server></app-edit-server>
       <hr>
-      <app-server></app-server>
+      <app-server></app-server> -->
+
     </div>
   </div>
   
