adding guard and resolver  to our application after routing is done

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,7 @@
 <h4>Welcome to Server Manager 4.0</h4>
 <p>Manage your Servers and Users.</p>
-<button class="button" (click)="onloadserver(1)">laod server</button>
+<button class="btn btn-success" (click)="onloadserver(1)">laod server</button>
+<button class="btn btn-default "   (click)="onLogin()">login</button>
+<button class="btn btn-default" (click) = "onLogout">logout</button>
 
 
